force-app/main/default/objects/Session__c/fields/Cvent_Id__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Id__c</fullName>
    <label>Cvent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>