force-app/main/default/objects/Session__c/fields/Event_Registration__c.field-meta.xml
<CustomField>
    <fullName>Event_Registration__c</fullName>
    <label>Event Registration</label>
    <referenceTo>Event_Registrations__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>