force-app/main/default/objects/Session__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Participant</label>
    <type>Checkbox</type>
</CustomField>