force-app/main/default/objects/Session__c/fields/Registered__c.field-meta.xml
<CustomField>
    <fullName>Registered__c</fullName>
    <label>Registered</label>
    <length>18</length>
    <type>Text</type>
</CustomField>