force-app/main/default/objects/Session__c/fields/Session_Name__c.field-meta.xml
<CustomField>
    <fullName>Session_Name__c</fullName>
    <label>Session Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>